--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -79,6 +79,7 @@ body::-webkit-scrollbar {
   font-weight: normal;
   font-size: 12px;
   line-height: 16px;
+  cursor: default;
 }
 .sdk-top-down-interface .tile-with-text-parent.with-accordion .tile-with-text {
   padding: 13px 20px 13px 30px;
