Css updated and Fix for Overlay in APP. Added Tooltip for Test button.

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1408,7 +1408,7 @@ float: right;
   overflow-x: hidden !important;
 }
 
-.sdk-top-down-interface .search-container.conversation .search-body {
+.top-down .sdk-top-down-interface .search-container.conversation .search-body {
   z-index:-1 !important;
 }
 
