--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -41,12 +41,12 @@
         <div class="group-radiobutton">
           <div class="kr-sg-radiobutton">
             <input id="buttonIdSynonyms" value="synonym" name="synonymType" class="radio-custom"
-              [(ngModel)]="newSynonymObj.type" type="radio">
-            <label for="buttonIdSynonyms" class="radio-custom-label">{{'synonyms.synonym'| translate}}</label>
-          </div>
+              [(ngModel)]="newSynonymObj.type" type="radio" (click)="synonymChanged()">
+            <label for="buttonIdSynonyms" class="radio-custom-label" >{{'synonyms.synonym'| translate}}</label>
+          </div> 
           <div class="kr-sg-radiobutton">
             <input id="buttonIdOneWaySynonyms" value="oneWaySynonym" name="synonymType" [(ngModel)]="newSynonymObj.type"
-              class="radio-custom" type="radio">
+              class="radio-custom" type="radio" (click)="synonymChanged()">
             <label for="buttonIdOneWaySynonyms"
               class="radio-custom-label">{{'synonyms.one_way_synonym' | translate}}</label>
           </div>
@@ -70,7 +70,7 @@
               <input placeholder="Type Synonym and Press Enter" [value]="typedQuery" [matChipInputFor]="chipList"
                 [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
                 (matChipInputTokenEnd)="add($event)" #suggestedInput [(ngModel)]="synonymObj.values"
-                [ngModelOptions]="{standalone: true}" autocomplete="off">
+                [ngModelOptions]="{standalone: true}"   autocomplete="off">
             </mat-chip-list>
           </mat-form-field>
         </div>
