1.show all click 2.infinite scroll calling multiple time search api issue fixed 3.tabs clicking filter don't update 4.infinite scroll reloading filters issue

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1994,7 +1994,13 @@ background:none !important;
   padding-left:0px !important;
 }
 .sdk-top-down-interface .custom-add-result-container{
-  margin-bottom:60px !important;
+  /* margin-bottom:60px !important; */
+  background: #FFFFFF;
+    box-sizing: border-box;
+    padding: 14px 12px;
+    width: 100%;
+    position: fixed;
+    bottom: 0px;
 }
 
 .sdk-top-down-interface .search-bar .widget-icon{
