--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -443,7 +443,7 @@
               <div class="inner-content row m-0">
                 <div *ngIf="!crwalObject.advanceOpts.crawlEverything" class="w-100 show-allow-urls">
                   <div class="allow-urls-sec row allow-urlBox padd  pl-0 pr-0" *ngIf="crwalObject.advanceOpts.allowedOpt">
-                    <div class="col-2 p-0 title">Allow URLS</div>
+                    <div class="col-2 p-0 title">Allow URLs</div>
                     <div class="col-10 p-0 d-flex align-items-center">
                       <div class="kr-sg-dropdowns">
                         <div class="dropdown dropdown-open">
@@ -494,7 +494,7 @@
 
                   <!--Block-->
                   <div class="allow-urls-sec row allow-urlBox padd pl-0 pr-0" *ngIf="crwalObject.advanceOpts.blockedOpt">
-                    <div class="col-2 p-0 title">Block URLS</div>
+                    <div class="col-2 p-0 title">Block URLs</div>
                     <div class="col-10 p-0 d-flex align-items-center">
                       <div class="kr-sg-dropdowns">
                         <div class="dropdown dropdown-open">
@@ -843,7 +843,7 @@
   <div class="status-modal-popup">
     <div class="modal_content" *ngIf="selectedSourceType">
       <div class="modal-header">{{selectedSourceType.name}} <img src="assets/images/close.svg"
-          (click)="closeCrawlModalPop()"></div>
+          (click)="closeStatusModal()"></div>
       <div class="modal-body">
         <ng-container *ngIf="!(statusObject.status==='success')">
           <div class="progressNote">
