--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -139,7 +139,7 @@
                                                 <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('inputbox1', col);color=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color)">Save Swatch</div>
+                                        <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color)">Save Color</div>
                                      </div>
                                 </div>
                             </div>
@@ -171,7 +171,7 @@
                                                 <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('inputBox2', col);color1=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color1)">Save Swatch</div>
+                                        <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color1)">Save Color</div>
                                      </div>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@
                                                 <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('placeholder', col);color2=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color2)">Save Swatch</div>
+                                        <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color2)">Save Color</div>
                                      </div>
                                 </div>
                             </div>
@@ -253,7 +253,7 @@
                                                     <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonTextColor', col);color3=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color3)">Save Swatch</div>
+                                            <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color3)">Save Color</div>
                                          </div>
                                     </div>
                                 </div>
@@ -284,7 +284,7 @@
                                                     <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonFill', col);color4=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color4)">Save Swatch</div>
+                                            <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color4)">Save Color</div>
                                          </div>
                                     </div>
                                 </div>
@@ -316,7 +316,7 @@
                                                     <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonBorder', col);color5=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color5)">Save Swatch</div>
+                                            <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color5)">Save Color</div>
                                          </div>
                                     </div>
                                 </div>
@@ -363,7 +363,7 @@
                                                         <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('msgColor', col);color6=col;"></div>
                                                     </ng-container>                                           
                                                 </div>
-                                                <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color6)">Save Swatch</div>
+                                                <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color6)">Save Color</div>
                                             </div>
                                         </div>
                                     </div>
