css issue fixed in app component

--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -16,6 +16,7 @@
     background: $whiteColor;
     padding: 0 20px;
     z-index: 100 !important;
+    height: 60px;
     .logoKoreIcon {
         outline: none;
         cursor: pointer;
