--- a/findly-builder/src/app/app.component.scss
+++ b/findly-builder/src/app/app.component.scss
@@ -31,19 +31,19 @@
         display: none;
     }
     .headerTabsContainer{
-        visibility: hidden;
+        display: none;
     }
     .myappname{
-        visibility: hidden;
+        display: none;
     }
     .no-landing-screen{
-        visibility: hidden;
+        display: none;
     }
     .app-dropdown{
-        visibility: hidden;
+        display: none;
     }
     .test-button{
-        visibility: hidden;
+        display: none;
     }
     .notification-dropdown{
         visibility: hidden;
@@ -56,10 +56,10 @@
             display: block !important;
         }
         .headerTabsContainer{
-            visibility: visible !important;
+            display: block !important;
         }
         .myappname{
-            visibility: visible !important;
+            display: block !important;
         }
         .toShowAppHeader{
             display: block !important;
@@ -77,13 +77,13 @@
             display: none;
         }
         .no-landing-screen{
-            visibility: visible !important;
+            display: block !important;
         }
         .app-dropdown{
-            visibility: visible !important;
+            display: block !important;
         }
         .test-button{
-            visibility: visible !important;
+            display: block !important;
         }
         .notification-dropdown{
             visibility: visible !important;
