--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -273,3 +273,8 @@ img.logo-img{
   right: 45px;
   bottom: 6px;
 }
+
+.top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec{
+  max-height: calc(100vh - 311px) !important;
+  /* /* max-height: calc(100vh - 380px) !important; if added filter */
+}
