--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -16,6 +16,7 @@
     background: $whiteColor;
     padding: 0 20px;
     z-index: 100 !important;
+    height: 60px;
     .logoKoreIcon {
         outline: none;
         cursor: pointer;
@@ -334,6 +335,20 @@
                         box-sizing: border-box;
                         border-radius: 4px;
                     }
+                }
+            }
+            &.train-btn{
+                width: 34px;
+                height: 34px;
+                text-align: center;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 4px;
+                margin: 0 10px;
+                transition: 0.2s all ease;   
+                &:hover{
+                    background: #E7F1FF;
                 }
             }
             &.search-block{
