--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -1,4 +1,12 @@
-<button (click)="openOnBoardingModal()">tour guide</button>
+<div class="over-view-config-tour">
+  <div class="tour-header">
+    <div class="title">Overview</div>
+    <div class="close-tour"><img src="assets/icons/close-white.svg"></div>
+  </div>
+  <div class="tour-info">Shows the Birds eye view of configurations in your App</div>
+  <button class="kr-sg-button-primary btn_lg" (click)="openOnBoardingModal()">Got It</button>
+</div>
+
 <div class="overview-container">  
   <perfect-scrollbar class="scroll_content">
     <div class="g-analytics" (click)="openDashboard()"><span>Go to Analytics</span></div>
@@ -321,25 +329,118 @@
 
 
 <!--tour guide popup-->
-<kr-modal modalType="center" modalClass="modal_popups_" #onBoardingModalPop>
-  <ng-container>
-    <div class="modal-header">
-      <div class="title">Link Bots</div>
-      <div class="close_icon"><img (click)="closeOnBoardingModal()" src="assets/icons/modal-close.svg"></div>
-    </div>
-    <perfect-scrollbar class="perfect-scroll-modal-body">
-      <div class="modal-body bots-modal-modal-body">
-        <ng-container>
-          <p class="bots-modal-list-text">Choose any one bot from the list below to link into your Findly app. You can
-            only link bots
-            that you have the rights to access.</p>          
-          <ng-container>
-            <div class="bots-modal-list-container">
-
-            </div>
-          </ng-container>
-        </ng-container>
+<kr-modal modalType="nodrop" modalClass="modal_popups_ onboarding-journey-modal" #onBoardingModalPop>
+  <div class="modal-header">
+    <div class="title">Your Quick Start Guide</div>
+    <div class="close-icon"><img (click)="closeOnBoardingModal()" src="assets/icons/modal-close.svg"></div>
+  </div>
+  <perfect-scrollbar class="perfect-scroll-modal-body">
+    <div id="accordion" class="accodion-content">
+      <div class="card_">
+        <div class="card_header">
+          <div data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="card_link" aria-expanded="true">
+              <div class="instruction-number">1</div>
+              <div class="guide-name">Start by Adding Data</div>              
+          </div>
+        </div>
+  
+        <div id="collapseOne" class="collapse">
+          <div class="card-body">
+              <div class="guide-inner-info">SearchAssist allows you to add different types of data such as FAQs, Actions, Content, Structured Data from various sources. </div>
+              <button class="kr-sg-button-primary btn_lg mr-3">Add Data</button>
+              <button class="kr-sg-button-secondary btn_lg ml-1">Learn More</button>
+          </div>
+        </div>
+      </div>  
+      
+      <div class="card_">
+        <div class="card_header">
+          <div data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="card_link" aria-expanded="true">
+              <div class="instruction-number">2</div>
+              <div class="guide-name">Index Data</div>              
+          </div>
+        </div>
+  
+        <div id="collapse2" class="collapse">
+          <div class="card-body">
+              <div class="guide-inner-info">SearchAssist allows you to Index the data that you want to make searchable.</div>
+              <button class="kr-sg-button-primary btn_lg mr-3">Start Indexing</button>
+              <button class="kr-sg-button-secondary btn_lg ml-1">Learn More</button>
+          </div>
+        </div>
       </div>
-    </perfect-scrollbar>
-  </ng-container>
+
+      <div class="card_">
+        <div class="card_header">
+          <div data-toggle="collapse" data-parent="#accordion" href="#collapse3" class="card_link" aria-expanded="true">
+              <div class="instruction-number">3</div>
+              <div class="guide-name">Optimize Search Results</div>              
+          </div>
+        </div>
+  
+        <div id="collapse3" class="collapse">
+          <div class="card-body">
+              <div class="guide-inner-info">SearchAssist allows to optimize the search results through Synonyms, Weights, Stop Words, Rules, Facets.</div>
+              <button class="kr-sg-button-primary btn_lg mr-3">Configure</button>
+              <button class="kr-sg-button-secondary btn_lg ml-1">Learn More</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card_">
+        <div class="card_header">
+          <div data-toggle="collapse" data-parent="#accordion" href="#collapse4" class="card_link" aria-expanded="true">
+              <div class="instruction-number">4</div>
+              <div class="guide-name">Design Search Experience</div>              
+          </div>
+        </div>
+  
+        <div id="collapse4" class="collapse">
+          <div class="card-body">
+              <div class="guide-inner-info">SearchAssist allows you to customize the search experience and design the search interface based on the business context. </div>
+              <button class="kr-sg-button-primary btn_lg mr-3">Start Designing</button>
+              <button class="kr-sg-button-secondary btn_lg ml-1">Learn More</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card_">
+        <div class="card_header">
+          <div data-toggle="collapse" data-parent="#accordion" href="#collapse5" class="card_link" aria-expanded="true">
+              <div class="instruction-number">5</div>
+              <div class="guide-name">Test the Application</div>              
+          </div>
+        </div>
+  
+        <div id="collapse5" class="collapse">
+          <div class="card-body">
+              <div class="guide-inner-info">SearchAssist allows you to validate the configuration and search experience before deploying the app by just clicking on the Test button. </div>
+              <button class="kr-sg-button-primary btn_lg mr-3">Test</button>
+              <button class="kr-sg-button-secondary btn_lg ml-1">Learn More</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card_">
+        <div class="card_header">
+          <div data-toggle="collapse" data-parent="#accordion" href="#collapse6" class="card_link" aria-expanded="true">
+              <div class="instruction-number">6</div>
+              <div class="guide-name">Fine-Tune Relevance</div>              
+          </div>
+        </div>
+  
+        <div id="collapse6" class="collapse">
+          <div class="card-body">
+              <div class="guide-inner-info">SearchAssist Allows you to fine-tune search results further with the result ranking actions such as pinning, boosting, lowering and hiding.</div>
+              <button class="kr-sg-button-primary btn_lg mr-3">Optimize</button>
+              <button class="kr-sg-button-secondary btn_lg ml-1">Learn More</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </perfect-scrollbar>
+  <div class="modal-footer">
+    I want to Explore by Myself
+  </div>
 </kr-modal>
