top down results and filters ui code changes

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -700,7 +700,7 @@ input:focus{
 .category-wise-container .group-checkbox.filters-content-top-down{
   border-bottom: none;
    padding: 0px;
-   max-height: 218px;
+   /* max-height: 218px; */
    overflow: auto;
    position: relative;
 }
