--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -278,3 +278,6 @@ img.logo-img{
   max-height: calc(100vh - 311px) !important;
   /* /* max-height: calc(100vh - 380px) !important; if added filter */
 }
+.top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec.filter-added{
+   max-height: calc(100vh - 380px) !important; 
+}
