search input placeholder and cross color ui changes fixed for top down

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1313,6 +1313,8 @@ float: right;
   right: 10px;
   top: -24px;
   z-index: 1;
+  padding: 3px 5px;
+  cursor: pointer;
 }
 
 .d-none{
@@ -2028,3 +2030,4 @@ background:none !important;
 a{
   text-decoration: none !important;
 }
+/*style="color :searchConfig.searchBarPlaceholderTextColor !important;"*/
