--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -3073,7 +3073,7 @@ nouislider{
         padding: 10px;
         text-align: center;
         border: 0;
-        width: 220px;
+        width: auto;
         max-width: 220px;
     }
 }
