changes done in app-home component

--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -169,7 +169,7 @@
   <div class="modal-body">
     <div class="kr-sg-input-text mb-3">
       <div class="label-text">Name Your App</div>
-      <input maxlength="128" type="text" autocomplete="off" placeholder="App name" class="input-text" [(ngModel)]="newApp.name" name="appName">
+      <input maxlength="128" type="text" autocomplete="off" placeholder="Test App" class="input-text" [(ngModel)]="newApp.name" name="appName">
     </div>
     <!-- <div class="kr-sg-input-text-area mb-2">
       <div class="label-text">Description</div>
@@ -177,7 +177,7 @@
     </div> -->
     <div class="kr-sg-input-text">
       <div class="label-text">Description</div>
-      <input class="input-text" maxlength="512" placeholder="App description" autocomplete="off" [(ngModel)]="newApp.description" name="appDesc">
+      <input class="input-text" maxlength="512" placeholder="Enter App Description" autocomplete="off" [(ngModel)]="newApp.description" name="appDesc">
     </div>
 
     
@@ -186,12 +186,12 @@
       <div class="dropdown dropdown-open">
           <button class="dropdown-toggle dropdown-input" data-toggle="dropdown" disabled>English</button>                                            
           <ul class="dropdown-menu content-menu">
-          <li class="search-box">
+          <!-- <li class="search-box">
               <input maxlength="128" type="text" placeholder="Search" class="seach-input">
-          </li>                                                
+          </li> -->
             <li><a>English</a></li>
-            <li><a>German</a></li>
-            <li><a>French</a></li>
+            <!-- <li><a>German</a></li>
+            <li><a>French</a></li> -->
           </ul>
       </div>
     </div>
