--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -763,7 +763,7 @@
                             }
                         }
                         .appearences-info{
-                            background: #F8F9FA;
+                            // background: #F8F9FA;
                             border-radius: 4px;
                             padding: 10px 20px;
                             margin: 20px 30px 40px 30px;
