--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -39,13 +39,20 @@
           <li class="nav-item">
             <a class="nav-link active" data-toggle="tab" href="#linkedBotTasks">Tasks ({{linkedBotTasks.length}})</a>
           </li>
-          <li class="nav-item" style="pointer-events: none; opacity: 0.5">
+          <!-- <li class="nav-item" style="pointer-events: none; opacity: 0.5">
             <a class="nav-link" data-toggle="tab" href="#linkedBotFAQs">FAQs ({{linkedBotFAQs.length}})</a>
           </li>
           <li class="nav-item" style="pointer-events: none; opacity: 0.5">
             <a class="nav-link" data-toggle="tab" href="#linkedBotSmallTalk">Small Talk</a>
-          </li>
+          </li> -->
         </ul>
+        <!-- <div class="search-container">
+
+          <label class="kr-sg-toggle large">                                       
+            <input type="checkbox" checked>
+            <div class="slider"><span class="enabled">Enabled</span><span class="disabled">Disabled</span></div>
+        </label>
+        </div> -->
         <div class="tab-content">
           <div id="linkedBotTasks" class="tab-pane active">
             <div class="linked-bot-tasks-content-container">
