--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -304,6 +304,9 @@
                                         color: #161928;
                                         margin: 0 0 2px !important;	
                                     }
+                                    .kg-gray-text{
+                                        color:#9AA0A6 !important;
+                                    }
                                     .normal-text {
                                         font-weight: 400;
                                         font-style: normal;
