--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -12434,6 +12434,29 @@ padding-right: 0;
     top : 33%;
 }
 
+/* qa csss patch */
 .structured-data-outer-wrap{
     margin-bottom: 23px;
 }
+.faqs-full-search-container{
+    margin-bottom: 0px;
+}
+.pages-full-search-container{
+    margin-bottom: 0px;
+}
+.documents-full-search-container{
+    margin-bottom: 0px;
+}
+.faqs-data-container{
+    margin-bottom: 0px;
+}
+.pages-data-container{
+    margin-bottom: 0px;
+}
+.documents-data-container{
+    margin-bottom: 0px;
+}
+.structured-data-container{
+    margin-bottom: 0px;
+}
+/* qa csss patch */
